# coaching-Automation

./: .env.production.example  .gitignore  2026-02-10-update.md  Pending_task.md  README.md  TEST_PLAN_AI.txt  alembic.ini  bootstrap.py  coaching.db  database_analysis_report.md  database_viewing_guide.md  healthcheck.py  requirements.txt  view_database.py  view_db.py
.slingshot/: agentHooks.json
app/: db.py  (+13 more)
coach-communication-service/: README.md  pyproject.toml
coach-communication-service/communication/: app.py  app_state.py  compat.py
coach-communication-service/communication/api/: __init__.py  analytics.py  auth.py  messages.py  providers.py  rules.py  telegram_linking.py  templates.py
coach-communication-service/communication/core/: __init__.py  event_bus.py  message_dispatcher.py  provider_registry.py  rate_limiter.py  retry_engine.py  state_store.py  template_engine.py
coach-communication-service/communication/linking/: __init__.py  service.py  telegram_linking.py
coach-communication-service/communication/models/: __init__.py  message_log.py  message_queue.py  message_template.py  notification_rule.py  provider_config.py
coach-communication-service/communication/providers/: __init__.py  base.py  telegram_provider.py  whatsapp_provider.py
coach-communication-service/communication/security/: crypto.py
coach-communication-service/sdk/: __init__.py  client.py
coach-communication-service/tests/: test_fallback_worker.py  test_retry_engine.py  test_telegram_linking.py  test_template_engine.py
coach-communication-service/ui/: index.html  package.json
(+401 files in other folders)
